# jenkins2gha

./: .gitignore  README.md  app.py  converted.yaml  pyproject.toml  requirements.txt
converter/: convert_jenkins_to_gha.py  interface.py
converter/convert/: convert_stage.py
converter/parse/: parse_environment.py  parse_matrix.py  parse_option.py  parse_parameter.py  parse_post.py  parse_stage.py  parse_steps.py  parse_tool.py  parse_trigger.py  parse_when.py
converter/plugins/: base_plugin.py  echo_plugin.py  git_plugin.py  load_plugins.py  retry_plugin.py  script_plugin.py  sh_plugin.py  with_credentials_plugin.py
converter/rag_llm_generator/: rag_llm_generator.py
converter/rag_llm_generator/jenkins_plugins_2025/: 42crunch-security-audit-plugin.txt  Aristiun-Aribot-Plugin.txt  CFLint-plugin.txt  DotCi.txt  JDK_Parameter_Plugin-plugin.txt  JenkinsPipelineUnit.txt  JiraTestResultReporter-plugin.txt  (+2167 more)
converter/utils/: JenkinsComparisonSingle.py  analyze_jenkins_dependencies.py  extract_block.py  extract_block_by_scope.py  extract_complete_block.py  find_matching_brace.py  getLogger.py  map_jenkins_to_github_vars.py  merge_yaml_components.py  normalize_job_name.py  split_steps_content.py  strip_jenkins_comments.py  yaml_to_string.py
static/css/: style.css
static/js/: main.js
templates/: index.html
verify_result/: rag_information.json  rag_information_analysis.json
verify_result/GitHub actions importer/: yaml_comparison_report_2.html  yaml_comparison_results_2.txt
verify_result/本工具/: yaml_comparison_report.html  yaml_comparison_results.txt
(+5 files in other folders)
